--- a/src/routes/about/about.css
+++ b/src/routes/about/about.css
@@ -30,6 +30,7 @@
 .about-us img {
     object-fit: cover;
     height: 100%;
+    width: 100%;
 }
 
 .about-us section:first-child {
@@ -128,9 +129,9 @@
 .slider-pagination li:first-child a,
 .slider-pagination li:last-child a {
     background-color: initial;
-    font-size: 1.4rem;
+    font-size: 2rem;
     color: var(--primary-font);
-    padding: 0.1rem 0.5rem;
+    padding: 0 12px;
     font-weight: 800;
     border: solid 1px var(--primary-font);
     border-radius: 100%;
@@ -234,6 +235,12 @@
     .team-slider {
         gap: 1rem;
     }
+    .slider-pagination li:first-child a {
+        left: 90%;
+    }
+    .slider-pagination li:last-child a {
+        left: 97%;
+    }
 }
 
 @media screen and (max-width: 800px) {
@@ -253,11 +260,14 @@
     .our-team-header {
         width: 90%;
     }
+    .slider-pagination {
+        margin-top: 4rem;
+    }
     .slider-pagination li:first-child a {
-        left: 90%;
+        left: 85%;
     }
     .slider-pagination li:last-child a {
-        left: 97%;
+        left: 95%;
     }
     .highlight-testimonial-1 {
         width: 90%;
@@ -272,10 +282,10 @@
         width: 80%;
     }
     .slider-pagination li:first-child a {
-        left: 86%;
+        left: 75%;
     }
     .slider-pagination li:last-child a {
-        left: 95%;
+        left: 90%;
     }
     .highlight-testimonials-author {
         flex-direction: column;
